--- a/app/src/main/res/layout/list_item_scream.xml
+++ b/app/src/main/res/layout/list_item_scream.xml
@@ -2,9 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.pekomon.screambox.ScreamViewModel"/>
+    </data>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        tools:text="Scream name"/>
+        android:text="@{viewModel.title}"
+        tools:text="Scream name">
+
+    </Button>
 
 </layout>
