--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ScreamBoxButton">
+        <item name="android:background">@color/dark_blue</item>
+    </style>
+
+    <style name="ScreamBoxButton.Strong">
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
