--- a/app/src/main/res/layout/list_item_scream.xml
+++ b/app/src/main/res/layout/list_item_scream.xml
@@ -8,13 +8,20 @@
             type="com.example.pekomon.screambox.ScreamViewModel"/>
     </data>
 
-    <Button
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:onClick="@{() -> viewModel.onButtonClicked()}"
-        android:text="@{viewModel.title}"
-        tools:text="Scream name">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
 
-    </Button>
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:onClick="@{() -> viewModel.onButtonClicked()}"
+            android:text="@{viewModel.title}"
+            tools:text="Scream name">
+
+        </Button>
+    </FrameLayout>
 
 </layout>
